--- a/bsd/sieve/Makefile
+++ b/bsd/sieve/Makefile
@@ -1,11 +1,11 @@
 # Makefile for sieve programs
 
 CC = cc
-# Base flags that work on all compilers
 CFLAGS = -O
-# Check if compiler supports K&R warning suppression (modern GCC/Clang)
-KR_WARN_FLAGS := $(shell $(CC) -Wno-implicit-int -E - < /dev/null > /dev/null 2>&1 && echo "-Wno-implicit-int -Wno-deprecated-non-prototype -Wno-return-mismatch -Wno-return-type")
-KR_CFLAGS = $(CFLAGS) $(KR_WARN_FLAGS)
+# Modern warning flags (comment out on 2.11BSD)
+KR_MODERN_WARNINGS = -Wno-implicit-int -Wno-deprecated-non-prototype -Wno-return-mismatch -Wno-return-type
+# Uncomment the next line on macOS/Linux, comment out on 2.11BSD
+KR_CFLAGS = $(CFLAGS) $(KR_MODERN_WARNINGS)
 PROGRAMS = sieve krsieve
 SRCS = sieve.c krsieve.c
 
