--- a/bsd/wget/Makefile
+++ b/bsd/wget/Makefile
@@ -4,11 +4,11 @@
 
 # Choose your compiler and options. For 2.11BSD, you might just do:
 CC      = cc
-# Base flags that work on all compilers
-CFLAGS  = -O
-# Check if compiler supports warning suppression (modern GCC/Clang)
-WARN_FLAGS := $(shell $(CC) -Wno-deprecated-non-prototype -E - < /dev/null > /dev/null 2>&1 && echo "-Wno-deprecated-non-prototype")
-CFLAGS += $(WARN_FLAGS)
+CFLAGS  = -O   # or -O2 if your system supports it; or just -g
+# Modern warning flags (comment out on 2.11BSD)
+MODERN_WARNINGS = -Wno-deprecated-non-prototype
+# Uncomment the next line on macOS/Linux, comment out on 2.11BSD
+CFLAGS += $(MODERN_WARNINGS)
 
 # If you need special socket libs, uncomment or adjust the line below:
 # LIBS   = -lsocket -lnsl
