--- a/bsd/httpd/Makefile
+++ b/bsd/httpd/Makefile
@@ -1,9 +1,6 @@
 DESTDIR= /usr/libexec
 CFLAGS= -O
-# Modern warning flags (comment out on 2.11BSD)
-MODERN_WARNINGS= -Wno-deprecated-non-prototype -Wno-deprecated-declarations -Wno-pointer-sign -Wno-parentheses -Wno-incompatible-pointer-types -Wno-format
-# Uncomment the next line on macOS/Linux, comment out on 2.11BSD
-CFLAGS += $(MODERN_WARNINGS)
+LDFLAGS= -O
 PROGRAM=	httpd
 SRCS=		httpd.c
 OBJS=		httpd.o
@@ -11,8 +8,17 @@ LIBS=
 
 all:	${PROGRAM}
 
+${OBJS}: ${SRCS}
+	@if [ "`uname -m`" = "pdp11" ]; then \
+		echo "Building for PDP-11..."; \
+		${CC} ${CFLAGS} -c -o $@ ${SRCS}; \
+	else \
+		echo "Building for modern system..."; \
+		${CC} ${CFLAGS} -Wno-deprecated-non-prototype -Wno-deprecated-declarations -Wno-pointer-sign -Wno-parentheses -Wno-incompatible-pointer-types -Wno-format -c -o $@ ${SRCS}; \
+	fi
+
 ${PROGRAM}:	${OBJS}
-	${CC} ${CFLAGS} -o $@ ${OBJS} ${LIBS}
+	${CC} ${LDFLAGS} -o $@ ${OBJS} ${LIBS}
 
 install: ${PROGRAM}
 	install -s -m 755 ${PROGRAM} ${DESTDIR}
