--- a/bsd/sieve/Makefile
+++ b/bsd/sieve/Makefile
@@ -2,10 +2,6 @@
 
 CC = cc
 CFLAGS = -O
-# Modern warning flags (comment out on 2.11BSD)
-KR_MODERN_WARNINGS = -Wno-implicit-int -Wno-deprecated-non-prototype -Wno-return-mismatch -Wno-return-type
-# Uncomment the next line on macOS/Linux, comment out on 2.11BSD
-KR_CFLAGS = $(CFLAGS) $(KR_MODERN_WARNINGS)
 PROGRAMS = sieve krsieve
 SRCS = sieve.c krsieve.c
 
@@ -15,7 +11,11 @@ sieve: sieve.c
 	$(CC) $(CFLAGS) -o sieve sieve.c
 
 krsieve: krsieve.c
-	$(CC) $(KR_CFLAGS) -o krsieve krsieve.c
+	@if [ "`uname -m`" = "pdp11" ]; then \
+		$(CC) $(CFLAGS) -o krsieve krsieve.c; \
+	else \
+		$(CC) $(CFLAGS) -Wno-implicit-int -Wno-deprecated-non-prototype -Wno-return-mismatch -Wno-return-type -o krsieve krsieve.c; \
+	fi
 
 clean:
 	rm -f $(PROGRAMS) *.o
