--- a/bsd/wget/Makefile
+++ b/bsd/wget/Makefile
@@ -5,10 +5,6 @@
 # Choose your compiler and options. For 2.11BSD, you might just do:
 CC      = cc
 CFLAGS  = -O   # or -O2 if your system supports it; or just -g
-# Modern warning flags (comment out on 2.11BSD)
-MODERN_WARNINGS = -Wno-deprecated-non-prototype
-# Uncomment the next line on macOS/Linux, comment out on 2.11BSD
-CFLAGS += $(MODERN_WARNINGS)
 
 # If you need special socket libs, uncomment or adjust the line below:
 # LIBS   = -lsocket -lnsl
@@ -16,7 +12,11 @@ CFLAGS += $(MODERN_WARNINGS)
 all: wget
 
 wget: wget.c
-	$(CC) $(CFLAGS) wget.c -o wget $(LIBS)
+	@if [ "`uname -m`" = "pdp11" ]; then \
+		$(CC) $(CFLAGS) wget.c -o wget $(LIBS); \
+	else \
+		$(CC) $(CFLAGS) -Wno-deprecated-non-prototype wget.c -o wget $(LIBS); \
+	fi
 
 clean:
 	rm -f wget
