Make matrix use dynamic screen size

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 pdpsrc.code-workspace
 .vscode/ftp-sync.json
 .vscode/settings.json
+bsd/screensavers/sine
+bsd/screensavers/matrix2
+bsd/screensavers/sine2
+bsd/screensavers/stars
+bsd/screensavers/matrix
+bsd/screensavers/life
