Update panel structure

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "stdio.h": "c",
         "time.h": "c",
         "unistd.h": "c",
-        "file.h": "c"
+        "file.h": "c",
+        "stdint.h": "c"
     }
 }
