Update NetBSD code

--- a/bsd/socket/Makefile
+++ b/bsd/socket/Makefile
@@ -3,16 +3,25 @@
 
 CC = cc
 CFLAGS = -O
-LDFLAGS = 
+
+# Platform-specific libraries
+UNAME_S := $(shell uname -s)
+ifeq ($(UNAME_S),NetBSD)
+    CLIENT_LIBS = -lkvm
+    SERVER_LIBS = 
+else
+    CLIENT_LIBS = 
+    SERVER_LIBS = 
+endif
 
 # Default target
 all: client server
 
 client: client.c
-	$(CC) $(CFLAGS) -o client client.c $(LDFLAGS)
+	$(CC) $(CFLAGS) -o client client.c $(CLIENT_LIBS)
 
 server: server.c
-	$(CC) $(CFLAGS) -o server server.c $(LDFLAGS)
+	$(CC) $(CFLAGS) -o server server.c $(SERVER_LIBS)
 
 clean:
 	rm -f client server
