--- a/bsd/socket/Makefile
+++ b/bsd/socket/Makefile
@@ -1,5 +1,6 @@
 # Makefile for socket client/server programs
-# Compatible with both macOS and 211BSD
+# Compatible with macOS, NetBSD, and 211BSD
+# Clients are now organized by platform under arch/
 
 CC = cc
 CFLAGS = -O
@@ -7,12 +8,31 @@ CFLAGS = -O
 # Default target
 all: client server
 
-# Use different targets for different platforms
-client: client.c
-	@if [ "`uname -s`" = "NetBSD" ]; then \
-		$(CC) $(CFLAGS) -o client client.c -lkvm; \
+# Detect platform and build appropriate client
+client:
+	@echo "Detecting platform..."
+	@if [ "`uname -s`" = "Darwin" ]; then \
+		echo "Building macOS client..."; \
+		cd arch/macOS && $(MAKE) && cd ../..; \
+		cp arch/macOS/client client; \
+	elif [ "`uname -s`" = "NetBSD" ]; then \
+		if [ "`uname -m`" = "amd64" ]; then \
+			echo "Building NetBSD x64 client..."; \
+			cd arch/NetBSDx64 && $(MAKE) && cd ../..; \
+			cp arch/NetBSDx64/client client; \
+		else \
+			echo "Building NetBSD VAX client..."; \
+			cd arch/NetBSDVAX && $(MAKE) && cd ../..; \
+			cp arch/NetBSDVAX/client client; \
+		fi; \
+	elif [ -f /usr/include/pdp11 ] || [ "`uname -s`" = "2.11BSD" ]; then \
+		echo "Building 2.11BSD client..."; \
+		cd arch/211BSD && $(MAKE) && cd ../..; \
+		cp arch/211BSD/client client; \
 	else \
-		$(CC) $(CFLAGS) -o client client.c; \
+		echo "Unknown platform, defaulting to macOS client..."; \
+		cd arch/macOS && $(MAKE) && cd ../..; \
+		cp arch/macOS/client client; \
 	fi
 
 server: server.c
@@ -20,5 +40,11 @@ server: server.c
 
 clean:
 	rm -f client server
+	@for dir in arch/*/; do \
+		if [ -f "$$dir/Makefile" ]; then \
+			echo "Cleaning $$dir..."; \
+			cd "$$dir" && $(MAKE) clean && cd ../..; \
+		fi; \
+	done
 
-.PHONY: all clean
+.PHONY: all clean client server
