First light with virtual panel

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ bsd/socket/NetBSDVAX/client
 bsd/socket/211BSD/client
 bsd/socket/macOS/client
 bsd/socket/arch/NetBSDVAX/client
+bsd/socket/arch/211BSD/client
