First shot at Linux code

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ bsd/socket/211BSD/client
 bsd/socket/macOS/client
 bsd/socket/arch/NetBSDVAX/client
 bsd/socket/arch/211BSD/client
+bsd/socket/arch/LinuxX64/client
+bsd/dry/dry29
